Generates componentsUsage.json

--- a/src/templates/partials/component-detail.hbs
+++ b/src/templates/partials/component-detail.hbs
@@ -1,3 +1,12 @@
+{{#if component.componentsUsed}}
+    <p class="comment">
+        <h3>Components Used</h3>
+    </p>
+    <p class="comment">
+        {{component.componentsUsed}}
+    </p>
+{{/if}}
+
 <p class="comment">
     <h3>File</h3>
 </p>
